--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/lodash": "^4.17.15",
     "framer-motion": "^12.0.5",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
